--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -10,11 +10,11 @@
  <Version>8.0.0.0</Version><AssemblyVersion>8.0.0.0</AssemblyVersion><FileVersion>8.0.0.0</FileVersion><InformationalVersion>8.0.0.0-09/23/2023 19:02:34</InformationalVersion></PropertyGroup>
 
  <ItemGroup>
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0-preview-23424-02" />
-  <PackageReference Include="xunit" Version="2.5.1" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+  <PackageReference Include="xunit" Version="2.5.3" />
   <PackageReference Include="DeepEqual" Version="4.2.1" />
   <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
-  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.2-pre.3">
+  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
    <PrivateAssets>all</PrivateAssets>
   </PackageReference>
@@ -27,8 +27,8 @@
  <ItemGroup>
   <ProjectReference Include="..\..\src\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
 
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.1.23421.29" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.0-rc.2.23480.2" />
  </ItemGroup>
 
 </Project>
