--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
  <PropertyGroup>
   <TargetFramework>net8.0</TargetFramework>
@@ -21,17 +21,17 @@
 
  <ItemGroup>
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.1.23421.29" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0-rc.1.23421.29" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.1.23421.29" />
+  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.2.23480.2" />
   <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview3.23201.1" />
-  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.0-rc.1.23421.29" />
-  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0-rc.1.23421.29" />
-  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.2.2">
+  <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.3.0-beta">
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
-  <PackageReference Include="System.DirectoryServices" Version="8.0.0-rc.1.23419.4" />
+  <PackageReference Include="System.DirectoryServices" Version="8.0.0-rc.2.23479.6" />
  </ItemGroup>
 
  <ItemGroup>
