--- a/Test/PlaywrightTests/PlaywrightTests.csproj
+++ b/Test/PlaywrightTests/PlaywrightTests.csproj
@@ -15,11 +15,14 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.1" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.37.1" />
-  <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-  <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-  <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+  <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.39.0" />
+  <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
+  <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  <PackageReference Include="coverlet.collector" Version="6.0.0">
+    <PrivateAssets>all</PrivateAssets>
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+  </PackageReference>
  </ItemGroup>
 
  <!--Für Playwright-->
