--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
  <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
- 
+
  <!--Weitere App-Metadaten -->
  <PropertyGroup>
   <Description>Blazor Server (Server Side Blazor) Version of the MiracleList Web Frontend</Description>
@@ -11,8 +11,8 @@
  <!--Compiler + Secrets-->
  <PropertyGroup>
   <RootNamespace>Web</RootNamespace>
-  <UserSecretsId>f4ee1587-6574-4ece-b932-69c8c91abe04</UserSecretsId>
   <NoWarn>1701;1702;1998</NoWarn>
+  <UserSecretsId>f4ee1587-6574-4ece-b932-69c8c91abe04</UserSecretsId>
  </PropertyGroup>
 
  <!--Projektreferenzen-->
@@ -24,25 +24,19 @@
   <ProjectReference Include="..\MLBlazorRCL\MLBlazorRCL.csproj" />
   <ProjectReference Include="..\SamplesRCL\SamplesRCL.csproj" />
  </ItemGroup>
- 
+
  <ItemGroup>
   <!--Zusätzliche NuGet-Pakete von Microsoft -->
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0-rc.2.23480.2" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0-rc.2.23480.2" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.0-rc.2.23480.2" />
   <!--Zusätzliche NuGetPakete von Anderen-->
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.1" />
-  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.0" />
-  <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-  <PackageReference Include="Blazored.Toast" Version="4.1.0" />
-  <PackageReference Include="UAParser" Version="3.1.47" />
-  <PackageReference Include="Radzen.Blazor" Version="4.18.1" />
- </ItemGroup>
- 
- <ItemGroup>
-   <Folder Include="Properties\PublishProfiles\" />
-   <Folder Include="Properties\ServiceDependencies\" />
-   <Folder Include="wwwroot\Files\" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.12.*" />
+  <PackageReference Include="ITV.EFCoreUtil" Version="3.1.*" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
+  <PackageReference Include="Blazored.Toast" Version="4.1.*" />
+  <PackageReference Include="UAParser" Version="3.1.*" />
+  <PackageReference Include="Radzen.Blazor" Version="4.18.*" />
  </ItemGroup>
 
 </Project>
