--- a/src/MiracleList_BU.Client/wwwroot/appsettings.json
+++ b/src/MiracleList_BU.Client/wwwroot/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+ "DetailedErrors": true, // turns on CircuitOptions.DetailedErrors
+ "Backend": {
+  "StagingURL": "https://miraclelistbackend-staging.azurewebsites.net/",
+  "LiveURL": "https://miraclelistbackend.azurewebsites.net/",
+  "DebugURL": "http://localhost:8889/",
+  "ClientID": "11111111-1111-1111-1111-111111111112"
+ }
 }
