--- a/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
+++ b/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
@@ -4,7 +4,6 @@
 
  <!--Weitere App-Metadaten -->
  <PropertyGroup>
-  <TargetFramework>net8.0</TargetFramework>
   <Description>Blazor Web App (Blazor United) Version of the MiracleList Web Frontend</Description>
  </PropertyGroup>
  
@@ -16,10 +15,15 @@
   <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
   <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
  </PropertyGroup>
+ <ItemGroup>
+   <Compile Include="..\MiracleList_BW\Authentication\MLAuthenticationStateProvider3Tier.cs" Link="Authentication\MLAuthenticationStateProvider3Tier.cs" />
+ </ItemGroup>
 
  <!--NuGet-Pakete-->
  <ItemGroup>
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.2.23480.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0-rc.2.23480.2" />
+
  </ItemGroup>
 
  <!--Projektreferenzen-->
@@ -30,6 +34,9 @@
   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
   <ProjectReference Include="..\MLBlazorRCL\MLBlazorRCL.csproj" />
   <ProjectReference Include="..\SamplesRCL\SamplesRCL.csproj" />
+ </ItemGroup>
+ <ItemGroup>
+   <Folder Include="Authentication\" />
  </ItemGroup>
  
 </Project>
