--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -25,7 +25,9 @@
   <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.*" />
   <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.*" />
   <PackageReference Include="System.Net.Http.Json" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
+  
+  <!--Verträgt sich nicht mit aktiviertem Multi-Threading in BW :-(-->
+  <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />-->
 
   <!--Zusätzliche Pakete von Anderen-->
   <PackageReference Include="Blazor.ContextMenu" Version="1.16.*" />
