--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -14,15 +14,28 @@
   <StartupObject>Web.Program</StartupObject>
   <UserSecretsId>1a22018c-6aab-42f2-8be5-0a4cedeeb272</UserSecretsId>
   <NoWarn>1701;1702;1998</NoWarn>
-  <!--für Zeigerprogrammierung erlauben für neue JSinterop seit Blazor WebAssembly 7.0-->
-  <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  <!--Optional für AOT-Kompilierung-->
-  <RunAOTCompilation>true</RunAOTCompilation>
  </PropertyGroup>
+ 
  <ItemGroup>
    <_WebToolingArtifacts Remove="Properties\PublishProfiles\FolderProfile_AOT.pubxml" />
    <_WebToolingArtifacts Remove="Properties\PublishProfiles\FolderProfile_JITerpreter.pubxml" />
  </ItemGroup>
+
+ <!--Speziell für Blazor WebAssembly-->
+ <PropertyGroup>
+  <!--für Zeigerprogrammierung erlauben für neue JSinterop seit Blazor WebAssembly 7.0-->
+  <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+  <!--Optional für AOT-Kompilierung-->
+  <!--<RunAOTCompilation>true</RunAOTCompilation>-->
+ </PropertyGroup>
+
+ <!--Optional Multi-Threading-->
+ <!--<PropertyGroup>
+  <WasmEnableThreads>true</WasmEnableThreads>
+ </PropertyGroup>
+  <ItemGroup>
+  <PackageReference Include="Microsoft.NET.WebAssembly.Threading" Version="8.0.*" />
+ </ItemGroup>-->
 
  <!--für PWA-->
  <ItemGroup>
@@ -63,7 +76,6 @@
   <!--Standardreferenzen für BW-->
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.*" PrivateAssets="all" />
-
  </ItemGroup>
 
  <!--Optional: Native dependencies für Samples_BW/NativeCall.razor und Samples_BW/SQLite -> Verlängert die Kompilierung-->
