--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -40,6 +40,7 @@
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.10.0" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
