--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -21,6 +21,7 @@
  </ItemGroup>
 
  <ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
