--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -30,7 +30,7 @@
   <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />-->
 
   <!--Zusätzliche Pakete von Anderen-->
-  <PackageReference Include="Blazor.ContextMenu" Version="1.16.*" />
+  <PackageReference Include="Blazor.ContextMenu" Version="2.0.0" />
   <PackageReference Include="Blazor.Extensions.Logging" Version="2.0.*" />
   <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
   <PackageReference Include="Blazored.Toast" Version="4.2.0" />
