--- a/src/DA/DA.csproj
+++ b/src/DA/DA.csproj
@@ -53,20 +53,20 @@
   <ProjectReference Include="..\BO\BO.csproj" />
  </ItemGroup>
 
+ <!--EF Core-->
  <ItemGroup>
-  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.10.8" />
   <PackageReference Include="ITV.EFCoreUtil" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.*" />
+  <PackageReference Include="EntityFrameworkProfiler" Version="6.0.6046" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.*" />
-  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
  </ItemGroup>
 
+ <!--DB-Treiber-->
  <ItemGroup>
-  <Reference Include="HibernatingRhinos.Profiler.Appender">
-   <HintPath>..\..\Lib\HibernatingRhinos.Profiler.Appender.dll</HintPath>
-  </Reference>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.*" />
+  <PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.3.10.8" />
+  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
  </ItemGroup>
 
  <ItemGroup>
