--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -10,6 +10,7 @@
  </PropertyGroup>
 
  <PropertyGroup>
+  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
   <NoWarn>$(NoWarn);NU1605</NoWarn>
   <DebugType>Full</DebugType>
   <AssemblyName>UnitTests</AssemblyName>
