--- a/src/MiracleList_Backend/MiracleList_Backend.csproj
+++ b/src/MiracleList_Backend/MiracleList_Backend.csproj
@@ -2,7 +2,6 @@
 
  <!--Hinweis: <TargetFramework> und Versionsnummer+Metadaten für App kommen aus Directory.Build.props-->
 
- 
  <PropertyGroup Label="Globals">
   <SccProjectName>SAK</SccProjectName>
   <SccProvider>SAK</SccProvider>
@@ -18,6 +17,14 @@
   <CodeAnalysisRuleSet>..\..\rules.ruleset</CodeAnalysisRuleSet>
   <Description>Backend for MiracleList (Sample Application)</Description>
   <UserSecretsId>17877888-c559-4d28-bbed-c3436690aec2</UserSecretsId>
+ </PropertyGroup>
+
+ <PropertyGroup Condition=" '$(Configuration)' == '' Or '$(Configuration)' == 'Debug'">
+  <EnvironmentName>Development</EnvironmentName>
+ </PropertyGroup>
+
+ <PropertyGroup Condition=" '$(Configuration)' != '' AND '$(Configuration)' != 'Debug' ">
+  <EnvironmentName>Production</EnvironmentName>
  </PropertyGroup>
 
  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -61,8 +68,7 @@
   <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.*" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3" />
-  
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3" /> 
  </ItemGroup>
 
  <ItemGroup>
