--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -44,7 +44,7 @@
  <ItemGroup>
   <PackageReference Include="Blazored.LocalStorage" Version="4.4.*" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.14.2" />
+  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.*" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
