--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -20,9 +20,9 @@
 
  <!--Versionen-->
  <PropertyGroup>
-  <Version>8.3.0.0</Version>
-  <AssemblyVersion>8.3.0.0</AssemblyVersion>
-  <FileVersion>8.3.0.0</FileVersion>
+  <Version>8.3.1.0</Version>
+  <AssemblyVersion>8.3.1.0</AssemblyVersion>
+  <FileVersion>8.3.1.0</FileVersion>
  </PropertyGroup>
 
  <!--Autor-->
@@ -39,6 +39,14 @@
   </Description>
   <PackageOutputPath>H:\DB\NugetHS</PackageOutputPath>
  </PropertyGroup>
+
+ <!--Package Readme.md File-->
+ <PropertyGroup>
+  <PackageReadmeFile>readme.md</PackageReadmeFile>
+ </PropertyGroup>
+ <ItemGroup>
+  <None Include="readme.md" Pack="true" PackagePath="\" />
+ </ItemGroup>
 
  <!--NuGets-->
  <ItemGroup>
@@ -60,14 +68,11 @@
  <!--Dateien-->
  <ItemGroup>
   <None Remove="ITVisions.jpg" />
-  <None Remove="readme.txt" />
   <None Remove="www.IT-Visions.de_Logo.png" />
  </ItemGroup>
  <ItemGroup>
   <Content Include="Controls\ConfirmDialog.razor.js" />
- </ItemGroup>
- <ItemGroup>
-  <EmbeddedResource Include="readme.txt" />
+  <Content Include="readme.md" />
  </ItemGroup>
  <ItemGroup>
   <None Include="wwwroot\img\ITVisions.jpg">
