--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -20,9 +20,10 @@
 
  <!--Versionen-->
  <PropertyGroup>
-  <Version>8.3.1.0</Version>
-  <AssemblyVersion>8.3.1.0</AssemblyVersion>
-  <FileVersion>8.3.1.0</FileVersion>
+  <Version>8.3.2.0</Version>
+  <AssemblyVersion>8.3.2.0</AssemblyVersion>
+  <FileVersion>8.3.2.0</FileVersion>
+  <InformationalVersion>8.3.2.0</InformationalVersion>
  </PropertyGroup>
 
  <!--Autor-->
