--- a/src/MLBlazorRCL/MLBlazorRCL.csproj
+++ b/src/MLBlazorRCL/MLBlazorRCL.csproj
@@ -35,7 +35,7 @@
   <PackageReference Include="Blazored.LocalStorage" Version="4.*" />
   <PackageReference Include="Blazored.Toast" Version="4.*" />
   <PackageReference Include="Blazored.FluentValidation" Version="2.2.0" />
-  <PackageReference Include="Radzen.Blazor" Version="4.*" />
+  <PackageReference Include="Radzen.Blazor" Version="5.1.10" />
  </ItemGroup>
 
  <ItemGroup>
