--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -54,14 +54,14 @@
   <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
   <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.0.0-*" />
-  <PackageReference Include="Microsoft.JSInterop" Version="9.0.0-*" />
+  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.*" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.*" />
+  <PackageReference Include="Microsoft.JSInterop" Version="8.*" />
   <PackageReference Include="UAParser" Version="3.1.*" />
  </ItemGroup>
 
